# AzureSphereScience

./: CMakeLists.txt  README.md  app_manifest.json  bmp180.c  bmp180.h  geiger.c  geiger.h  launch.vs.json  logstash.c  logstash.h  main.c  main.h  upload.c  upload.h
